starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__match_arms_record_field_order_mismatch_error.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nstruct A {\n    x: i64,\n    y: bool,\n}\n\nstruct B {\n    y: bool,\n    x: i64,\n}\n\nfn pick(c: bool, a: A, b: B) -> A {\n    match c {\n        true => { a },\n        false => { b },\n    }\n}\n"
---
E0008 (https://starstream.nightstream.dev/errors/E0008)

  x expected type `A`, found `B`
    ,-[test.star:14:20]
 12 |     match c {
 13 |         true => { a },
    :                   ^|
    :                    `-- expected `A` due to this
 14 |         false => { b },
    :                    ^|
    :                     `-- has type `B`
 15 |     }
    `----
