starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__match_arms_structural_enums_unify.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nenum First {\n    Go(i64),\n    Stop,\n}\n\nenum Second {\n    Go(i64),\n    Stop,\n}\n\nfn pick(c: bool, a: First, b: Second) -> First {\n    match c {\n        true => { a },\n        false => { b },\n    }\n}\n"
---
T-Fn: pick => First
  T-ReturnTail: match c {
    true => {
        a
    },
    false => {
        b
    },
} => Second
    T-Match: {a: First, b: Second, c: bool, pick: fn(c: bool, a: First, b: Second) -> First} ⊢ match c {
    true => {
        a
    },
    false => {
        b
    },
} ⇒ Second
      T-Var: {a: First, b: Second, c: bool, pick: fn(c: bool, a: First, b: Second) -> First} ⊢ c ⇒ bool
      Unify-Const: bool ~ bool => {}
      T-Tail: a => First
        T-Var: {a: First, b: Second, c: bool, pick: fn(c: bool, a: First, b: Second) -> First} ⊢ a ⇒ First
      Unify-Const: bool ~ bool => {}
      T-Tail: b => Second
        T-Var: {a: First, b: Second, c: bool, pick: fn(c: bool, a: First, b: Second) -> First} ⊢ b ⇒ Second
      Unify-Enum: Second ~ First => Second
    Unify-Enum: Second ~ First => {}
      Unify-Const: i64 ~ i64 => {}
