starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__match_bool_literal_exhaustive.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test(b: bool) -> i64 {\n    match b {\n        true => {\n            1\n        },\n        false => {\n            0\n        },\n    }\n}\n"
---
T-Fn: test => i64
  T-ReturnTail: match b {
    true => {
        1
    },
    false => {
        0
    },
} => i64
    T-Match: {b: bool, test: fn(b: bool) -> i64} ⊢ match b {
    true => {
        1
    },
    false => {
        0
    },
} ⇒ i64
      T-Var: {b: bool, test: fn(b: bool) -> i64} ⊢ b ⇒ bool
      Unify-Const: bool ~ bool => {}
      T-Tail: 1 => i64
        T-Int: {b: bool, test: fn(b: bool) -> i64} ⊢ 1 ⇒ i64
      Unify-Const: bool ~ bool => {}
      T-Tail: 0 => i64
        T-Int: {b: bool, test: fn(b: bool) -> i64} ⊢ 0 ⇒ i64
      Unify-Var: i64 ~ i64 => i64
    Unify-Var: i64 ~ i64 => {i64/t3}
