starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__match_bool_literal_non_exhaustive.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test(b: bool) -> i64 {\n    match b {\n        true => {\n            1\n        },\n    }\n}\n"
---
E0027 (https://starstream.nightstream.dev/errors/E0027)

  x non-exhaustive match
   ,-[test.star:2:5]
 1 |     fn test(b: bool) -> i64 {
 2 | ,->     match b {
 3 | |           true => {
 4 | |               1
 5 | |           },
 6 | `->     }
 7 |     }
   `----
  help: missing patterns:
        - `false`
        ensure all cases are covered or add a wildcard `_` pattern
