starstream-compiler/src/typecheck/snapshots/starstream_compiler__typecheck__tests__match_int_literal_needs_wildcard.snap
---
source: starstream-compiler/src/typecheck/tests.rs
description: "Source:\n\nfn test(n: i64) -> i64 {\n    match n {\n        0 => {\n            100\n        },\n        1 => {\n            200\n        },\n    }\n}\n"
---
]8;;https://starstream.nightstream.dev/errors/E0028\E0028 (link)]8;;\

  x non-exhaustive match
    ,-[test.star:2:5]
  1 |     fn test(n: i64) -> i64 {
  2 | ,->     match n {
  3 | |           0 => {
  4 | |               100
  5 | |           },
  6 | |           1 => {
  7 | |               200
  8 | |           },
  9 | `->     }
 10 |     }
    `----
  help: add a wildcard `_` pattern to cover remaining cases
